# TaggedFileFlow

./: Cargo.toml  README.md
.github/workflows/: release.yml  tag.yml
src/: asset.rs  data.rs  lib.rs  main.rs  types.rs
src/commands/: cmd.rs  del.rs  init.rs  list.rs  mod.rs  paste.rs  save.rs  show.rs
templates/: alias.sh  tff.fish  tff.nu
