[package]
name = "tagged_file_flow"
version = "2.0.0"
edition = "2024"
description = "Efficient File Management with Tagging"

[dependencies]
clap = { version = "=4.5.37", features = ["derive"] }
dirs = "=6.0.0"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
anyhow = "=1.0.98"
color-print = "=0.3.7"
rand = "=0.9.1"
fs-more = "=0.8.0"

[workspace.lints.rust]
nonstandard_style = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
